--- a/server/package.json
+++ b/server/package.json
@@ -12,7 +12,8 @@
     "pg": "^8.13.3",
     "redis": "^4.7.0",
     "cors": "^2.8.5",
-    "nodemon": "^3.1.9"
+    "nodemon": "^3.1.9",
+    "body-parser": "*"
   },
   "license": "MIT"
 }
