--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-REDIS_HOST=
-REDIS_PORT=
-PGHOST=
-PGPORT=
-PGUSER=
-PGPASSWORD=
-PGDATABASE=
+REDIS_HOST=redis
+REDIS_PORT=6379
+PGHOST=localhost
+PGPORT=5432
+PGUSER=postgres
+PGPASSWORD=postgres
+PGDATABASE=postgres
