--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,9 +3,11 @@ services:
     image: postgres:16-alpine
     container_name: postgres
     environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: postgres
+      PGUSER: ${PGUSER} # postgres
+      PGPASSWORD: ${PGPASSWORD} # postgres
+      PGDATABASE: ${PGDATABASE} # postgres
+      PGHOST: ${PGHOST} # localhost
+      PGPORT: ${PGPORT} # 5432
     ports:
       - "5432:5432"
   redis:
@@ -23,3 +25,11 @@ services:
     volumes:
       - /app/node_modules
       - ./server:/app
+    environment:
+      REDIS_HOST: ${REDIS_HOST} # redis
+      REDIS_PORT: ${REDIS_PORT} # 6379
+      PGUSER: ${PGUSER} # postgres
+      PGPASSWORD: ${PGPASSWORD} # postgres
+      PGDATABASE: ${PGDATABASE} # postgres
+      PGHOST: ${PGHOST} # localhost
+      PGPORT: ${PGPORT} # 5432
