--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,3 +33,25 @@ services:
       PGDATABASE: ${PGDATABASE} # postgres
       PGHOST: ${PGHOST} # localhost
       PGPORT: ${PGPORT} # 5432
+
+  client:
+    build:
+      context: ./client
+      dockerfile: Dockerfile.dev
+    container_name: client
+    ports:
+      - "3000:3000"
+    volumes:
+      - /app/node_modules
+      - ./client:/app
+  worker:
+    build:
+      context: ./worker
+      dockerfile: Dockerfile.dev
+    container_name: worker
+    volumes:
+      - /app/node_modules
+      - ./worker:/app
+    environment:
+      REDIS_HOST: ${REDIS_HOST} # redis
+      REDIS_PORT: ${REDIS_PORT} # 6379
