--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,18 +3,31 @@ services:
     image: postgres:16-alpine
     container_name: postgres
     environment:
-      PGUSER: ${PGUSER} # postgres
-      PGPASSWORD: ${PGPASSWORD} # postgres
-      PGDATABASE: ${PGDATABASE} # postgres
-      PGHOST: ${PGHOST} # localhost
-      PGPORT: ${PGPORT} # 5432
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: postgres
+      PGUSER: postgres
+      PGPASSWORD: postgres
+      PGDATABASE: postgres
+      PGHOST: localhost
+      PGPORT: 5432
     ports:
       - "5432:5432"
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
   redis:
     image: redis:latest
     container_name: redis
     ports:
       - "6379:6379"
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
   server:
     build:
       context: ./server
@@ -25,14 +38,19 @@ services:
     volumes:
       - /app/node_modules
       - ./server:/app
+    depends_on:
+      postgres:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
     environment:
-      REDIS_HOST: ${REDIS_HOST} # redis
-      REDIS_PORT: ${REDIS_PORT} # 6379
-      PGUSER: ${PGUSER} # postgres
-      PGPASSWORD: ${PGPASSWORD} # postgres
-      PGDATABASE: ${PGDATABASE} # postgres
-      PGHOST: ${PGHOST} # localhost
-      PGPORT: ${PGPORT} # 5432
+      REDIS_HOST: redis
+      REDIS_PORT: 6379
+      PGUSER: postgres
+      PGPASSWORD: postgres
+      PGDATABASE: postgres
+      PGHOST: postgres
+      PGPORT: 5432
 
   client:
     build:
@@ -52,6 +70,9 @@ services:
     volumes:
       - /app/node_modules
       - ./worker:/app
+    depends_on:
+      redis:
+        condition: service_healthy
     environment:
-      REDIS_HOST: ${REDIS_HOST} # redis
-      REDIS_PORT: ${REDIS_PORT} # 6379
+      REDIS_HOST: redis
+      REDIS_PORT: 6379
