--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,6 +29,7 @@ services:
       timeout: 5s
       retries: 5
   server:
+    image: server:latest
     build:
       context: ./server
       dockerfile: Dockerfile.dev
@@ -53,16 +54,18 @@ services:
       PGPORT: 5432
 
   client:
+    image: client:latest
     build:
       context: ./client
       dockerfile: Dockerfile.dev
     container_name: client
     ports:
-      - "3000:3000"
+      - "5173:5173"
     volumes:
       - /app/node_modules
       - ./client:/app
   worker:
+    image: worker:latest
     build:
       context: ./worker
       dockerfile: Dockerfile.dev
