--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "complex",
+  "name": "server",
   "version": "1.0.0",
   "description": "Server for the project",
   "main": "index.js",
