--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -17,6 +17,13 @@ server {
     proxy_pass http://client; # Proxy the request to the client service
   }
 
+  location /sockjs-node {
+    proxy_pass http://client;
+    proxy_http_version 1.1;
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Connection "upgrade";
+  }
+
   # Proxy API requests to the api service
   location /api {
     rewrite ^/api/(.*) /$1 break; # Remove /api prefix from the request
