--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,32 +1,25 @@
-# Define upstream server for the api service
+# Define upstream server for the api service (now localhost since it's in the same container)
 upstream api {
-  server api:5000;
-}
-
-# Define upstream server for the client service
-upstream client {
-  server client:5173;
+  server localhost:5000;
 }
 
 # Proxy requests to the client service for the frontend and api service for the backend
 server {
   listen 80; # Listen on port 80 for incoming requests
 
-  # Proxy requests to the client service for the frontend
+  # Serve static files for the frontend
   location / {
-    proxy_pass http://client; # Proxy the request to the client service
-  }
-
-  location /sockjs-node {
-    proxy_pass http://client;
-    proxy_http_version 1.1;
-    proxy_set_header Upgrade $http_upgrade;
-    proxy_set_header Connection "upgrade";
+    root /usr/share/nginx/html;
+    try_files $uri $uri/ /index.html;
   }
 
   # Proxy API requests to the api service
   location /api {
     rewrite ^/api/(.*) /$1 break; # Remove /api prefix from the request
     proxy_pass http://api; # Proxy the request to the api service
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
   }
 }
